@@ -12,6 +12,7 @@ vNEXT (in development)
  * Added support for batches
    * All events in a batch are buffered until the batch is finished
    * The events are then published together in a single `BatchReceived` event
+ * Added support for CHGHOST messages
  * (Internal) Introduced event mutators
    * Event mutators are now responsible for handling changing events in response to state
      e.g. ChannelFanOutMutator creates Channel* events for global quits/nick changes/etc
